[package]
name = "wasm-pqc-subtle"
version = "0.1.4"
edition = "2024"
authors = ["github.com/geoffsee"]
repository = "https://github.com/geoffsee/wasm-pqc-subtle"
description = "Library for post-quantum encryption"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ml-dsa = "0.0.4"
ml-kem = "0.2.2"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
