[package]
name = "wasm-pqc-subtle"
version = "0.2.4"
edition = "2024"
authors = ["github.com/geoffsee"]
repository = "https://github.com/geoffsee/wasm-pqc-subtle"
description = "Library for cross-platform post-quantum cryptography"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ml-dsa = "0.0.4"
ml-kem = "0.2.2"
argon2 = "0.6.0-rc.7"
password-hash = { version = "0.6.0-rc.12", optional = true, features = ["phc"] }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
